[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/textures/water_background.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/submarine_frames/submarine1.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/oxygen_meter.png" type="Texture" id=4]
[ext_resource path="res://scripts/TextureProgress.gd" type="Script" id=5]
[ext_resource path="res://scripts/World.gd" type="Script" id=6]
[ext_resource path="res://scripts/ScoreController.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/SlimeBox-GWMD.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/Coin.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/CoinCounter.gd" type="Script" id=10]
[ext_resource path="res://assets/textures/coin.png" type="Texture" id=11]
[ext_resource path="res://scripts/UpgradePanel.gd" type="Script" id=12]
[ext_resource path="res://assets/textures/ocean_floor.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/unlock_button.png" type="Texture" id=14]
[ext_resource path="res://shader/WavesShaderMaterial.tres" type="Material" id=15]
[ext_resource path="res://assets/textures/oxygen_tank.png" type="Texture" id=16]
[ext_resource path="res://scenes/OceanIdlePlayers.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/textures/submarine_frames/submarine2.png" type="Texture" id=18]
[ext_resource path="res://assets/textures/submarine.png" type="Texture" id=19]
[ext_resource path="res://assets/sounds/oxygen_depletion_sound.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/textures/waves.png" type="Texture" id=21]
[ext_resource path="res://assets/sounds/upgrade_sound.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/sounds/underwater.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/sounds/submarine_touchdown.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/sounds/upgrade_fail.wav" type="AudioStream" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44.4904, 26.6096 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 2 ), ExtResource( 18 ), ExtResource( 2 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.17, 0.33, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 15.0, 180.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=5]
size = 72
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 64
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 100
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 48
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 358.847, 31.1499 )

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 360, 3050 )
z_index = -1
texture = ExtResource( 1 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 360, 340 )
script = ExtResource( 3 )

[node name="PlayerBody" type="KinematicBody2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerBody"]
shape = SubResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="Player/PlayerBody"]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="Camera2D" type="Camera2D" parent="Player/PlayerBody"]
offset = Vector2( 0, 300 )
current = true
limit_bottom = 5800

[node name="OxygenDepletionSound" type="AudioStreamPlayer2D" parent="Player/PlayerBody"]
position = Vector2( -360, -340 )
stream = ExtResource( 20 )

[node name="SubmarineTouchdownPlayer" type="AudioStreamPlayer2D" parent="Player/PlayerBody"]
position = Vector2( -360, -340 )
stream = ExtResource( 24 )
volume_db = -10.0

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="Player/PlayerBody"]
anims/oxygen_depletion = SubResource( 3 )
anims/reset = SubResource( 4 )

[node name="OxygenMeter" type="Node2D" parent="."]
position = Vector2( 580, 1050 )
z_index = 1

[node name="TextureProgress" type="TextureProgress" parent="OxygenMeter"]
margin_left = -2.0
margin_top = 20.0
margin_right = 98.0
margin_bottom = 195.0
rect_scale = Vector2( 0.75, 0.75 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 2
tint_under = Color( 0.105882, 0.835294, 0.909804, 1 )
tint_progress = Color( 0.105882, 0.835294, 0.909804, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenMeterSprite" type="Node2D" parent="OxygenMeter"]
position = Vector2( 35, 40 )
scale = Vector2( 0.6, 0.6 )
z_index = -1

[node name="Sprite" type="Sprite" parent="OxygenMeter/OxygenMeterSprite"]
texture = ExtResource( 16 )

[node name="Score" type="Node2D" parent="."]
position = Vector2( 520, 30 )
script = ExtResource( 7 )

[node name="ScoreLabel" type="Label" parent="Score"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" parent="." groups=[
"coins",
] instance=ExtResource( 9 )]
position = Vector2( 0, -50 )

[node name="CoinCounter" type="Node2D" parent="."]
position = Vector2( 50, 50 )
script = ExtResource( 10 )

[node name="CoinLabel" type="Label" parent="CoinCounter"]
margin_left = 48.6863
margin_top = -27.6274
margin_right = 114.686
margin_bottom = 37.3726
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinSprite" type="Sprite" parent="CoinCounter"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="UpgradePanel" type="Node2D" parent="."]
position = Vector2( 0, 1010 )
script = ExtResource( 12 )

[node name="Button" type="TextureButton" parent="UpgradePanel"]
margin_right = 200.0
margin_bottom = 100.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenLabel" type="Node2D" parent="UpgradePanel"]
position = Vector2( 80, 80 )

[node name="OxygenPart1" type="Label" parent="UpgradePanel/OxygenLabel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
text = "O"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenPart2" type="Label" parent="UpgradePanel/OxygenLabel"]
margin_left = 40.7608
margin_top = 41.6892
margin_right = 80.7608
margin_bottom = 82.6892
custom_fonts/font = SubResource( 8 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusSign" type="Label" parent="UpgradePanel/OxygenLabel"]
margin_left = -55.0
margin_top = -10.0
margin_right = -14.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 9 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeSoundPlayer" type="AudioStreamPlayer2D" parent="UpgradePanel"]
stream = ExtResource( 22 )

[node name="UpgradeFailedSoundPlayer" type="AudioStreamPlayer2D" parent="UpgradePanel"]
stream = ExtResource( 25 )

[node name="UpgradeCostPart" type="Node2D" parent="UpgradePanel"]
position = Vector2( 20, -10 )

[node name="CoinSprite" type="Sprite" parent="UpgradePanel/UpgradeCostPart"]
position = Vector2( 140, 215 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="UpgradeCostLabelWrapper" type="Node2D" parent="UpgradePanel/UpgradeCostPart"]

[node name="UpgradeCost" type="Label" parent="UpgradePanel/UpgradeCostPart/UpgradeCostLabelWrapper"]
margin_left = 50.0
margin_top = 190.0
margin_right = 101.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OceanFloor" type="Node2D" parent="."]
position = Vector2( 360, 6000 )

[node name="Sprite" type="Sprite" parent="OceanFloor"]
texture = ExtResource( 13 )

[node name="Area2D" type="Area2D" parent="OceanFloor"]
position = Vector2( 0, 70 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OceanFloor/Area2D"]
shape = SubResource( 11 )

[node name="OceanIdlePlayers" parent="." instance=ExtResource( 17 )]

[node name="Waves" type="Sprite" parent="."]
material = ExtResource( 15 )
position = Vector2( 360, 370 )
z_index = -1
texture = ExtResource( 21 )

[node name="UnderwaterSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
[connection signal="finished" from="Player/PlayerBody/SubmarineTouchdownPlayer" to="Player" method="_on_SubmarineTouchdownPlayer_finished"]
[connection signal="oxygen_depleted_signal" from="OxygenMeter/TextureProgress" to="." method="_on_oxygen_depleted_signal"]
[connection signal="oxygen_depleted_signal" from="OxygenMeter/TextureProgress" to="Player" method="_on_oxygen_depleted_signal"]
[connection signal="pressed" from="UpgradePanel/Button" to="UpgradePanel" method="_on_Button_pressed"]
[connection signal="body_entered" from="OceanFloor/Area2D" to="." method="_on_Ocean_Floor_body_entered"]
[connection signal="body_entered" from="OceanFloor/Area2D" to="Player" method="_on_Ocean_Floor_body_entered"]
